Fixing broken CSS

--- a/resources/scss/accesibilidad.scss
+++ b/resources/scss/accesibilidad.scss
@@ -1039,8 +1039,7 @@ section {
     margin-top: 31px;
 }
 .footer_social {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    padding-top: 5px;
 }
 .footer_social ul li {
     display: inline-block;
