--- a/resources/scss/compile.scss
+++ b/resources/scss/compile.scss
@@ -1187,9 +1187,6 @@ h6 {
 /*Desde aquí*/
 
 /*-> de blog_single.css*/
-.header_container {
-    background: var(--white);
-}
 .main_nav li a {
     color: var(--gray-900);
 }
